<resources>
    <string name="app_name">IZVExtra</string>

    <string name="lugar">Lugar</string>
    <string name="descripcion">Descripcion</string>
    <string name="profesores">Profesores</string>
    <string name="grupos">Grupos</string>
    <string name="_12_12_2017">2017-12-12</string>
    <string name="_18_47">18:47</string>
    <string name="guardar">Guardar</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="aceptar">Aceptar</string>
    <string name="cerrar">Cerrar</string>
    <string name="pregunta">¿Seguro que deseas eliminar este elemento?</string>
    <string name="cancelar">Cancelar</string>
    <string name="filtrar">Filtrar</string>
    <string name="nueva_excursion">Nueva Excursion</string>
    <string name="editar_excursiones">Editar Excursiones</string>
    <string name="inicio">Inicio</string>
    <string name="ayuda">Ayuda</string>
    <string name="filtro">Filtro</string>
</resources>
