<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home"
            android:title="@string/inicio" />
        <item
            android:id="@+id/menu_admin"
            android:icon="@drawable/ic_edit"
            android:title="@string/editar_excursiones" />

        <item
            android:id="@+id/menu_group"
            android:icon="@drawable/ic_group"
            android:title="@string/grupos" />

        <item
            android:id="@+id/menu_teacher"
            android:icon="@drawable/ic_person"
            android:title="@string/profesores" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_help"
            android:icon="@drawable/ic_help"
            android:title="@string/ayuda" />
    </group>

</menu>